--- a/public/css/index.css
+++ b/public/css/index.css
@@ -81,6 +81,7 @@ form{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 
     font-size: 1.2rem;
 }
