adjustments made to media breakpoints for mobile screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -165,5 +165,6 @@ form{
         max-width: 90%;
         margin: 10px auto 20px auto;
         row-gap: 5px;
+        justify-content: center;
     }
 }
