adjustments made to media breakpoints for mobile screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -167,4 +167,8 @@ form{
         row-gap: 5px;
         justify-content: center;
     }
+
+    #text-area-label, #text-area{
+        margin-right: 0;
+    }
 }
