adjustments made to media breakpoints for mobile screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -164,7 +164,7 @@ form{
         min-width: 90%;
         max-width: 90%;
         margin: 10px auto 20px auto;
-        row-gap: 5px;
+        gap: 5px;
         justify-content: center;
     }
 
